[package]
name = "kubernix"
version = "0.2.0"
authors = ["Sascha Grunert <mail@saschagrunert.de>"]
edition = "2018"
license = "MIT"
categories = ["command-line-utilities"]
description = "Kubernetes development cluster bootstrapping with Nix packages"
documentation = "https://docs.rs/kubernix"
homepage = "https://github.com/saschagrunert/kubernix"
keywords = ["kubernetes", "nix", "nix-shell", "crio", "kube"]
readme = "README.md"
repository = "https://github.com/saschagrunert/kubernix"

[[bin]]
name = "kubernix"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.43"
base64 = "0.13.0"
clap = { git = "https://github.com/clap-rs/clap", features = ["wrap_help"] }
console = "0.14.1"
crossbeam-channel = "0.5.1"
getset = "0.1.1"
hostname = "0.3.1"
indicatif = "0.15.0"
ipnetwork = "0.18.0"
lazy_static = "1.4.0"
log = { version = "0.4.14", features = ["serde", "std"] }
nix = "0.24.2"
parking_lot = "0.11.2"
proc-mounts = "0.2.4"
rand = "0.8.4"
rayon = "1.5.1"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.70"
serde_yaml = "0.8.20"
signal-hook = "0.3.10"
toml = "0.5.8"

[dev-dependencies]
tempfile = "3.2.0"
