[package]
name = "kubernix"
version = "0.3.1"
authors = ["Sascha Grunert <mail@saschagrunert.de>"]
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0"
categories = ["command-line-utilities"]
description = "Kubernetes development cluster bootstrapping with Nix packages"
documentation = "https://docs.rs/kubernix"
homepage = "https://github.com/saschagrunert/kubernix"
keywords = ["kubernetes", "nix", "nix-shell", "crio", "kube"]
readme = "README.md"
repository = "https://github.com/saschagrunert/kubernix"

[[bin]]
name = "kubernix"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.102"
base64 = "0.22.1"
clap = { version = "4.6.1", features = ["derive", "wrap_help", "env", "color"] }
console = "0.16.3"
crossbeam-channel = "0.5.15"
indicatif = "0.18.4"
ipnetwork = { version = "0.21.1", features = ["serde"] }
log = { version = "0.4.29", features = ["serde", "std"] }
nix = { version = "0.31.3", features = ["fs", "hostname", "signal", "mount", "process", "user"] }
rand = "0.10.1"
rayon = "1.12.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
signal-hook = "0.4.4"
toml = "1.1.2"

[dev-dependencies]
tempfile = "3.27.0"
